--- a/ReturnColors/ReturnColors.csproj
+++ b/ReturnColors/ReturnColors.csproj
@@ -5,6 +5,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <GenerateEmbeddedFilesManifest>true</GenerateEmbeddedFilesManifest>
+    <BaseOutputPath>..\bin</BaseOutputPath>
+    <ApplicationIcon>icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Crayon" Version="2.0.69" />
@@ -14,5 +16,8 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="res\*.resources" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="icon.ico" />
   </ItemGroup>
 </Project>
